<resources>
    <string name="app_name">BoardCommunicator</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="settings">Settings</string>
    <string name="volume">Volume</string>
    <string name="update">Update</string>
    <string name="range_ip_btn">Update range IP</string>
    <string name="update_node">Update node</string>
    <string name="upload_file">Upload</string>
    <string name="connect_bluetooth">BT Connect</string>
    <string name="reset">Reset</string>
    <string name="find_free_ip">Find free IP</string>
    <string name="update_ip">Update IP</string>
    <string name="set_min_cap_vol">Set min vol</string>
    <string name="set_min_time_finish">Set time for finish</string>
    <string name="set_min_time_compare">Set time for compare</string>
    <string name="open_BT">Open</string>
    <string name="close_BT">Close</string>
    <string name="send_BT">Send</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_tabbed">TestTabbed</string>
    <string name="ready_to_connect">Ready to connect</string>
    <string name="read_ip">Read IP</string>
    <string name="read_ssid">Read SSID</string>
    <string name="read_pasword">Read password</string>
    <string name="result">Result:</string>
    <string name="set_ip">Set IP</string>
    <string name="testBtn">Test</string>

    <!-- ACTIONS CMDS TO THE BOARD -->
    <string name="cmd_test">01 04</string>
    <string name="cmd_reset">02 04</string>
    <string name="cmd_version">03 04</string>
    <string name="cmd_netstatus">04 04</string>
    <string name="cmd_server">05 04</string>
    <string name="cmd_cfgbytes">06 %1$d %2$s</string>
    <string name="cmd_readssid">07 04</string>
    <string name="cmd_readpasword">08 04</string>
    <string name="cmd_readip">09 04</string>
    <string name="cmd_changeip">0a 08</string>
    <string name="cmd_setminweight">10 06 %1$s</string>
    <string name="cmd_readminweight">11 04</string>
    <string name="cmd_setminweighttime">12 05 %1$s</string>
    <string name="cmd_readminweighttime">13 04</string>
    <string name="cmd_setmincomparetime">14 06 %1$s</string>
    <string name="cmd_readmincomparetime">15 04</string>
    <string name="cmd_setweightsteps">16 05 %1$s</string>
    <string name="cmd_readweightsteps">17 04</string>
    <string name="cmd_settimesteps">18 05 %1$s</string>
    <string name="cmd_readtimesteps">19 04</string>
    <string name="cmd_update_time">40 07</string>
    <string name="cmd_update_date">41 07</string>
    <string name="cmd_update_volume">42 05</string>
    <string name="cmd_ip_setting">43 07</string>
    <string name="cmd_read_ip">44 05</string>
    <!--TODO check this value, just entered random value to avoid crashing -->
    <string name="cmd_upload_file">45 05</string>


    <!--PANEL STRINGS-->
    <string name="min_time_set_btn">Set min time</string>
    <string name="min_time_read_btn">Read min time</string>
    <string name="min_weight_set_btn">Set min weight</string>
    <string name="read_min_weight_btn">Read min weight</string>
    <string name="set_min_compare_time_btn">Set compare time</string>
    <string name="read_compare_time_btn">Read compare time</string>
    <string name="set_time_step_btn">Set time step</string>
    <string name="read_time_step_btn">Read time step</string>
    <string name="set_weight_step_btn">Set weight step</string>
    <string name="read_weight_step_btn">Read weight step</string>

</resources>
