<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/connect_bluetooth" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Devices">

        <Button
            android:id="@+id/connectBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:onClick="connectToBT"
            android:text="@string/connect_bluetooth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/device_address" />

        <Spinner
            android:id="@+id/BTSpinner"
            android:layout_width="95dp"
            android:layout_height="37dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/device_name"
            android:layout_width="107dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toStartOf="@+id/device_address"
            app:layout_constraintTop_toBottomOf="@+id/BTSpinner" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="116dp"
            android:layout_height="38dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BTSpinner" />

        <Button
            android:id="@+id/disconnectBtn"
            android:layout_width="123dp"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:onClick="disconnectFromBT"
            android:text="Disconnect"
            app:layout_constraintEnd_toStartOf="@+id/connectBtn"
            app:layout_constraintTop_toBottomOf="@+id/device_name" />

        <TextView
            android:id="@+id/BT_result_text"
            android:layout_width="228dp"
            android:layout_height="53dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/ready_to_connect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disconnectBtn" />

        <Button
            android:id="@+id/readPwBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/read_pasword"
            app:layout_constraintStart_toEndOf="@+id/readSSIDBtn"
            app:layout_constraintTop_toBottomOf="@+id/findFreeIP" />

        <Button
            android:id="@+id/readSSIDBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/read_ssid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readIPBtn" />

        <Button
            android:id="@+id/readIPBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/read_ip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BT_result_text" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="247dp"
            android:layout_height="31dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/readPwBtn" />

        <Button
            android:id="@+id/setIP"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/set_ip"
            app:layout_constraintStart_toEndOf="@+id/setIpText"
            app:layout_constraintTop_toBottomOf="@+id/resultText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="73dp"
            android:layout_height="28dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readSSIDBtn" />

        <Button
            android:id="@+id/findFreeIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="16dp"
            android:text="@string/find_free_ip"
            app:layout_constraintStart_toEndOf="@+id/readIPBtn"
            app:layout_constraintTop_toBottomOf="@+id/BT_result_text" />

        <Button
            android:id="@+id/testBtn"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/testBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultText" />

        <EditText
            android:id="@+id/setIpText"
            android:layout_width="169dp"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/testBtn"
            app:layout_constraintTop_toBottomOf="@+id/resultText" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>

