<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NodeActivity">

    <Button
        android:id="@+id/nodeTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="updateTime"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nodeDatebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="updateDate"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@+id/nodeTimeBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nodeFindIPBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="findFirstFreeIP"
        android:text="@string/find_free_ip"
        app:layout_constraintStart_toEndOf="@+id/nodeDatebtn"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="352dp"
        android:layout_height="9dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nodeDatebtn" />

    <EditText
        android:id="@+id/freeIPResultText"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/updateNodeIP"
        android:layout_width="124dp"
        android:layout_height="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:onClick="updateIP"
        android:text="@string/update_ip"
        app:layout_constraintStart_toEndOf="@+id/freeIPResultText"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="352dp"
        android:layout_height="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freeIPResultText" />

    <Spinner
        android:id="@+id/minCapVolSpinner"
        android:layout_width="95dp"
        android:layout_height="37dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Spinner
        android:id="@+id/minTimeForFinishSpinner"
        android:layout_width="95dp"
        android:layout_height="37dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minCapVolSpinner" />

    <Spinner
        android:id="@+id/minTimeForCompSpinner"
        android:layout_width="95dp"
        android:layout_height="37dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTimeForFinishSpinner" />

    <Button
        android:id="@+id/minCapBtn"
        android:layout_width="214dp"
        android:layout_height="43dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="setMinCapVolume"
        android:text="@string/set_min_cap_vol"
        app:layout_constraintStart_toEndOf="@+id/minCapVolSpinner"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/minTimeForFinishBtn"
        android:layout_width="215dp"
        android:layout_height="42dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="setMinTimeForFinish"
        android:text="@string/set_min_time_finish"
        app:layout_constraintStart_toEndOf="@+id/minTimeForFinishSpinner"
        app:layout_constraintTop_toBottomOf="@+id/minCapBtn" />

    <Button
        android:id="@+id/minTimeForCompareBtn"
        android:layout_width="213dp"
        android:layout_height="44dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="setMinTimeForCompare"
        android:text="@string/set_min_time_compare"
        app:layout_constraintStart_toEndOf="@+id/minTimeForCompSpinner"
        app:layout_constraintTop_toBottomOf="@+id/minTimeForFinishBtn" />

    <View
        android:id="@+id/divider7"
        android:layout_width="348dp"
        android:layout_height="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTimeForCompareBtn" />

    <Button
        android:id="@+id/nodeResetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:onClick="reset"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />
</android.support.constraint.ConstraintLayout>